<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- TITLE -->
    <string name="app_name">Library One Tap</string>
    <string name="library">Library</string>
    <string name="settings_title">Settings</string>
    <string name="vcard_title">Virtual Yulan card</string>
    <string name="net_title">Remain Campus Network</string>
    <string name="electric_title">Remain Electric Charge</string>
    <string name="bath_title">Bathhouse Reservation</string>
    <string name="secret_title">FAKE lol</string>
    <string name="about_title">About</string>
    <string name="volunteer_title">Volunteer hours</string>
    <string name="grade_major_title">Grades</string>
    <string name="grade_minor_title">Grades (Minor)</string>
    <string name="lessons_title">Selected courses</string>
    <string name="exams_title">Exams</string>

    <!-- INIT -->
    <string name="in_welcome">Welcome</string>
    <string name="in_message">Welcome! Please set your information first. \nPress OK to go to Settings.</string>

    <!-- MENU -->
    <string name="mn_detail">Single</string>
    <string name="mn_yanxiujian">Yanxiujian</string>
    <string name="mn_tools">Tools</string>

    <!-- DETAIL FRAGMENT -->
    <string name="df_enter">Sign in</string>
    <string name="df_leave">Sign out</string>
    <string name="df_temp">Temp out</string>
    <string name="df_refresh">Reload</string>
    <string name="df_cancel">Cancel\nreservation</string>
    <string name="df_reserve">Reserve\na seat</string>
    <string name="df_reset">Reset\nreservation</string>

    <string name="df_inside">Inside</string>
    <string name="df_outside">Temp outside</string>
    <string name="df_not_start">Has not started</string>

    <string name="df_no_valid_order">No valid order found</string>
    <string name="df_temp_end_time">"Temporary leave deadline: "</string>

    <string name="df_cancel_confirm">Confirm cancellation</string>
    <string name="df_cancel_confirm_yes">Yes</string>
    <string name="df_cancel_confirm_no">No</string>

    <string name="df_random">Random</string>

    <string name="df_reserve_reset_confirm">Please confirm to reset reservation</string>

    <string name="df_not_in_valid_time">Cannot reserve NOW</string>

    <!-- TOOLS -->
    <string name="tl_bath">Reserve Bathroom NOW</string>
    <string name="tl_cernet">Remaining campus network</string>
    <string name="tl_electric">Remaining electric charge</string>
    <string name="tl_vcard">Virtual Yulan card</string>
    <string name="tl_volunteer">Total Volunteer Hours</string>

    <!-- BATH RESERVE -->
    <string name="br_bath_reserve">Reserve bathroom right now</string>
    <string name="br_request_sent">Appointment request has been sent</string>

    <string name="br_permission_prompt">We need this permission to get SSID of WIFI, so as to detect whether it is in the campus network environment</string>
    <string name="br_permission_got">Permission successfully obtained, please click the button again</string>
    <string name="br_permission_fail">Failed to obtain permission, please go to settings to enable it manually</string>

    <!-- GRADES -->
    <string name="gr_empty">There is no score.</string>
    <string name="gr_stat">Weighted average score: %1$.2f  GPA: %2$s</string>
    <string name="gr_eval_first">Evaluate first</string>
    <string name="gr_template">%1$s\nScore: %2$s\nCredit: %3$.1f\nGP: %4$.1f</string>

    <!-- EXAMS -->
    <string name="ex_empty">There is no exam.</string>
    <string name="ex_finished_list">Finished</string>
    <string name="ex_empty_room">Undefined</string>
    <string name="ex_template">Time: %1$s\nRoom: %2$s</string>
    <string name="ex_minor">Minor</string>

    <!-- LESSONS -->
    <string name="ls_unavailable">The course table is not available at the moment, please try again later.</string>
    <string name="ls_stat">Count: %1$d\nTotal Credits: %2$.1f</string>
    <string name="ls_template">Teacher: %1$s\nClass code: %2$s\nCredit: %3$.1f\nType: %4$s</string>
    <string name="ls_compulsory">Compulsory</string>
    <string name="ls_elective">Elective</string>

    <!-- SETTINGS -->
    <string name="st_basic_information">Basic information</string>
    <string name="st_name">Name</string>
    <string name="st_user_id">ID</string>
    <string name="st_passwd">Password</string>
    <string name="st_gp_algorithm">GPA algorithm</string>
    <string name="st_general">General</string>
    <string name="st_dark_mode">Dark Mode</string>
    <string name="st_main_theme">Theme</string>
    <string name="st_language">Language</string>
    <string name="st_reset_data">Reset App Data</string>
    <string name="st_other">Others</string>
    <string name="st_cache">Clear Cache</string>
    <string name="st_check_update">Check Update</string>
    <string name="st_latest_changelog">Show Latest Changelog</string>
    <string name="st_submit_issue">Submit an issue</string>

    <!-- GLOBAL PROMPT -->
    <string name="glb_error">Error</string>
    <string name="glb_ok">OK</string>
    <string name="glb_no">Cancel</string>

    <string name="glb_unknown_error">Unknown Error</string>

    <string name="glb_loading">Loading…</string>
    <string name="glb_loaded">Logged in</string>
    <string name="glb_fail_to_login_no_retry">Login failed, please retry.</string>
    <string name="glb_fail_to_login">Login failed, retrying…</string>
    <string name="glb_fail_to_login_three_times">Failed 3 times…\nCheck your id and password</string>
    <string name="glb_login_timeout">Session timeout, please refresh</string>
    <string name="glb_no_userdata">Please input your information in the Settings page first.</string>

    <string name="glb_net_error">Network Error</string>
    <string name="glb_net_disconnected">Network Disconnected</string>
    <string name="glb_net_timeout">Network Timeout</string>

    <string name="glb_net_api_error">API Error. Temporarily unavailable.</string>

    <string name="glb_download_start">Download start</string>
    <string name="glb_download_failed">Download Failed</string>
    <string name="glb_downloading">Downloading…</string>
    <string name="glb_downloaded">Download finished</string>

    <!-- UPDATE -->
    <string name="upd_detected">Update detected</string>
    <string name="upd_confirm">Update</string>
    <string name="upd_dismiss">Dismiss</string>

    <string name="upd_available">"Update available: "</string>

    <string name="upd_latest_changelog">Latest Changelog</string>

    <!-- UNIT -->
    <string name="rmb">" Yuan"</string>
    <string name="degree">" degree"</string>
    <string name="hours">" hours"</string>

    <!-- TOOLS PROMPT -->
    <string name="tlp_remain_net_fee">"Balance: "</string>
    <string name="tlp_used_net">"Used network: "</string>
    <string name="tlp_remain_net">"Remain network: "</string>
    <string name="tlp_remain_electric">"Remain electric: "</string>
    <string name="tlp_vol_update_time">"Updated: "</string>
    <string name="tlp_invalid_id_or_name">Wrong name and ID</string>
    <string name="tlp_find_same_data">Same ID/name detected. Check your ID.\nIf this problem still exists, please check on WeChat official account.</string>
    <string name="tlp_reserved">Reserve request has been sent</string>
    <string name="tlp_minor_detected">Minor detected. Entry has been added.</string>

    <!-- SETTINGS PROMPT -->
    <string name="stp_data_reset_confirm">Please confirm to clear appdata.</string>
    <string name="stp_data_reset_completed">AppData has been cleared, Exiting…</string>
    <string name="stp_cache_cleared">Cache has been cleared</string>
    <string name="stp_custom_deprecated">MD3 themes will be enforced globally after a few versions</string>
    <string name="stp_issue_desc">Bug Report/Feature Request (Need VPN)</string>

    <string name="stp_current_is_latest_version">You have the latest app.</string>
    <string name="stp_failed_to_connect_github_api">Failed to connect to GitHub.</string>
    <string name="stp_github_api_rate_limit">GitHub API rate limit, try later.</string>

    <string name="stp_notification_permission_prompt">We need notification permissions to show the download progress.</string>

    <!-- ARRAYS -->
    <!-- TOOLS -->
    <string-array name="gp">
        <item>DLUT algorithm</item>
        <item>Standard quintile algorithm</item>
        <item>Standard quarter algorithm</item>
        <item>Peking University quarter algorithm</item>
    </string-array>

    <!-- SETTINGS -->
    <string-array name="themes">
        <item>Random</item>
        <item>Library</item>
        <item>Blue</item>
        <item>Pink</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Simple</item>
    </string-array>

    <string-array name="dark_mode">
        <item>Follow system</item>
        <item>On</item>
        <item>Off</item>
    </string-array>

    <string-array name="language_name">
        <item>Follow system</item>
        <item>简体中文</item>
        <item>English</item>
    </string-array>

    <!-- BATH RESERVE ACTIVITY -->
    <string-array name="bath_array">
        <item>West 1F</item>
        <item>West 2F</item>
        <item>West 3F</item>
        <item>North Male</item>
        <item>North Female</item>
    </string-array>

    <!-- DETAIL FRAGMENT -->
    <string-array name="area_array">
        <item>Lingxi</item>
        <item>Bochuan</item>
    </string-array>
</resources>
